# teosibileau.github.io

./: .gitignore  404.html  hugo.toml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: hugo.yaml
content/: _index.md
css/: base.css
cv/: index.html
docs/: cv.md  index.md
docs/stylesheets/: extra.css
layouts/_partials/: head.html  header.html
partials/: code.md  experience.md  timesquare.md  whoami.md
partials/experience/: buenosaires.md  dks.md  ine.md  ine_2.md  infoxel.md  nucivic.md  satellogic.md  sl.md  slickmining.md  sonder.md
search/: search_index.json
static/css/: custom.css
