[tool.poetry]
name = "teosibileau-github-io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "teosibileau"}]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
pymdown-extensions = "^10.0.1"
pyyaml = "6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
