[tool.poetry]
name = "teosibileau-github-io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
pymdown-extensions = "^10.0.1"
pyyaml = "^6.0.1"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-encryptcontent-plugin = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
